--- a/package.json
+++ b/package.json
@@ -61,8 +61,7 @@
       "cordova-plugin-splashscreen": {},
       "cordova-plugin-ionic-webview": {},
       "cordova-plugin-ionic-keyboard": {},
-      "cordova-plugin-inappbrowser": {},
-      
+      "cordova-plugin-inappbrowser": {}
     },
     "platforms": [
       "android"
